Fix spacing added tooltips enable button when a product is slected

--- a/src/pages/DashboardPage/DashboardPage.css
+++ b/src/pages/DashboardPage/DashboardPage.css
@@ -308,6 +308,7 @@
     border-radius: 10px;
     padding: 24px;
     box-sizing: border-box;
+    height: 810px;
 }
 
 .table-header {
@@ -376,7 +377,6 @@
 
 .create-po-btn {
     background: #2563EB;
-    opacity: 0.5;
     border-radius: 4px;
     color: white;
     padding: 10px 20px;
@@ -387,6 +387,11 @@
     gap: 8px;
     position: relative;
     top: 57px;
+}
+
+.create-po-btn:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
 }
 
 .table-filters {
@@ -554,7 +559,8 @@
 .product-info p {
     margin: 0;
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 350;
+    line-height: 22px;
 }
 
 .table-footer {
